// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subtitle component matches Subtitle snapshot 0 1`] = `
<h2>
  THIS IS TEST TEXT 1
</h2>
`;

exports[`Subtitle component matches Subtitle snapshot 1 1`] = `
<h2>
  THIS IS TEST TEXT 2
</h2>
`;
